k8s-frontend-demo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-frontend-demo
  labels:
    app: k8s-frontend-demo
spec:
  type: ClusterIP
  selector:
    app: k8s-frontend-demo
  ports:
    - name: http
      port: 80
      targetPort: 3000
